--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@cwi/array-encoding",
+  "name": "cwi-array-encoding",
   "version": "0.1.3",
   "description": "Efficiently encode Uint8Arrays as base64 strings",
   "main": "build/index.js",
   "repository": "git+https://github.com/p2ppsr/array-encoding",
   "author": "Peer-to-Peer Privacy Systems Research LLC",
-  "license": "PROPRIETARY",
+  "license": "Open BSV License",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
@@ -22,8 +22,5 @@
     "jest": "^26.0.1",
     "rollup": "^2.15.0",
     "rollup-plugin-babel": "^4.4.0"
-  },
-  "dependencies": {
-    "@cwi/errors": "^0.1.0"
   }
 }
