--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "build": "rollup -c --environment BUILD:production",
+    "build": "webpack --config webpack.prod.js",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
@@ -17,7 +17,11 @@
     "@babel/preset-env": "^7.10.2",
     "babel-jest": "^26.0.1",
     "jest": "^26.0.1",
-    "rollup": "^2.15.0",
-    "rollup-plugin-babel": "^4.4.0"
+    "webpack": "^5.73.0",
+    "webpack-bundle-analyzer": "^4.7.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2",
+    "webpack-merge": "^5.8.0",
+    "node-polyfill-webpack-plugin": "^1.1.4"
   }
 }
